--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "emotion": "^10.0.27",
     "firebase": "^7.14.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
